--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
 		"bootstrap": "4.3.1",
 		"css-mediaquery": "^0.1.2",
 		"date-fns": "^2.0.0-beta.5",
+		"email-validator": "^2.0.4",
 		"graphql": "^14.5.1",
 		"install": "^0.13.0",
+		"lodash": "^4.17.15",
 		"material-ui-pickers": "^2.2.4",
 		"moment": "^2.24.0",
 		"node-sass": "^4.12.0",
@@ -51,5 +53,8 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"eslint-plugin-react-hooks": "^2.0.1"
 	}
 }
