--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"@date-io/date-fns": "^1.3.9",
 		"@date-io/moment": "^1.3.9",
 		"@material-ui/codemod": "^4.3.0",
+		"@material-ui/core": "^4.4.2",
 		"@material-ui/icons": "^4.2.1",
 		"@material-ui/pickers": "^3.2.4",
 		"aor-language-spanish": "^2.0.7",
