--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"@material-ui/core": "^4.4.2",
 		"@material-ui/icons": "^4.2.1",
 		"@material-ui/pickers": "^3.2.4",
+		"@material-ui/system": "^4.4.3",
 		"aor-language-spanish": "^2.0.7",
 		"bootstrap": "4.3.1",
 		"css-mediaquery": "^0.1.2",
@@ -19,6 +20,7 @@
 		"lodash": "^4.17.15",
 		"material-ui-pickers": "^2.2.4",
 		"moment": "^2.24.0",
+		"moment-timezone": "^0.5.26",
 		"node-sass": "^4.12.0",
 		"npm": "^6.11.2",
 		"ra-auth-acl": "^0.1.1",
@@ -31,8 +33,11 @@
 		"react-admin-date-inputs": "^1.1.2",
 		"react-apollo": "^3.0.1",
 		"react-dom": "^16.9.0",
+		"react-google-charts": "^3.0.15",
+		"react-moment": "^0.9.2",
 		"react-places-autocomplete": "^7.2.1",
-		"react-scripts": "3.1.1"
+		"react-scripts": "3.1.1",
+		"recharts": "^1.7.1"
 	},
 	"scripts": {
 		"start": "react-scripts start",
