--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
     "prettier.alignObjectProperties": true,
     "cSpell.words": [
         "Bearer",
+        "Linea",
         "Typography",
         "icon",
         "iniciado",
