--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"@material-ui/icons": "^4.2.1",
 		"@material-ui/pickers": "^3.2.4",
 		"@material-ui/system": "^4.4.3",
+		"@react-pdf/renderer": "^1.6.7",
 		"aor-language-spanish": "^2.0.7",
 		"bootstrap": "4.3.1",
 		"css-mediaquery": "^0.1.2",
@@ -32,6 +33,7 @@
 		"react-admin": "^2.9.6",
 		"react-admin-date-inputs": "^1.1.2",
 		"react-apollo": "^3.0.1",
+		"react-countup": "^4.2.2",
 		"react-dom": "^16.9.0",
 		"react-google-charts": "^3.0.15",
 		"react-icofont": "^1.0.13",
