--- a/package.json
+++ b/package.json
@@ -20,15 +20,12 @@
 		"install": "^0.13.0",
 		"lodash": "^4.17.15",
 		"material-ui-pickers": "^2.2.4",
+		"moleculer-data-provider": "^1.0.0",
 		"moment": "^2.24.0",
 		"moment-timezone": "^0.5.26",
 		"node-sass": "^4.12.0",
 		"npm": "^6.11.2",
 		"ra-auth-acl": "^0.1.1",
-		"ra-data-graphql": "^2.9.6",
-		"ra-data-json-server": "^2.9.6",
-		"ra-data-rest-hapi": "^2.4.4",
-		"ra-data-simple-rest": "^2.9.6",
 		"react": "^16.9.0",
 		"react-admin": "^2.9.6",
 		"react-admin-date-inputs": "^1.1.2",
