--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"react-dom": "^16.9.0",
 		"react-google-charts": "^3.0.15",
 		"react-icofont": "^1.0.13",
+		"react-icons": "^3.8.0",
 		"react-moment": "^0.9.2",
 		"react-places-autocomplete": "^7.2.1",
 		"react-scripts": "3.1.1",
