--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
 		"css-mediaquery": "^0.1.2",
 		"date-fns": "^2.0.0-beta.5",
 		"email-validator": "^2.0.4",
+		"firebase": "^7.3.0",
 		"graphql": "^14.5.1",
 		"install": "^0.13.0",
 		"lodash": "^4.17.15",
 		"material-ui-pickers": "^2.2.4",
-		"moleculer-data-provider": "^1.0.1",
+		"moleculer-data-provider": "1.0.1",
 		"moment": "^2.24.0",
 		"moment-timezone": "^0.5.26",
 		"node-sass": "^4.12.0",
