--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 		"install": "^0.13.0",
 		"lodash": "^4.17.15",
 		"material-ui-pickers": "^2.2.4",
-		"moleculer-data-provider": "1.0.1",
+		"moleculer-data-provider": "^1.0.3",
 		"moment": "^2.24.0",
 		"moment-timezone": "^0.5.26",
 		"node-sass": "^4.12.0",
@@ -64,6 +64,7 @@
 		]
 	},
 	"devDependencies": {
+		"dotenv": "^8.2.0",
 		"eslint-config-prettier": "^6.5.0",
 		"eslint-plugin-prettier": "^3.1.1",
 		"eslint-plugin-react-hooks": "^2.0.1"
