--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,25 +1,39 @@
 {
-    "vsprettier.endOfLine": "lf",
-    "vsprettier.printWidth": 100,
-    "vsprettier.requireConfig": true,
-    "vsprettier.requirePragma": true,
-    "vsprettier.singleQuote": true,
-    "vsprettier.useEsLint": true,
-    "vsprettier.useStyleLint": true,
-    "vsprettier.useTabs": true,
-    "vsprettier.useTsLint": true,
-    "vsprettier.jsxSingleQuote": true,
-    "prettier.alignObjectProperties": true,
-    "cSpell.words": [
-        "Bearer",
-        "Departamentos",
-        "Habilitado",
-        "Linea",
-        "Listar",
-        "Typography",
-        "icon",
-        "iniciado",
-        "props",
-        "registrate"
-    ]
+  "vsprettier.endOfLine": "lf",
+  "vsprettier.printWidth": 100,
+  "vsprettier.requireConfig": true,
+  "vsprettier.requirePragma": true,
+  "vsprettier.singleQuote": true,
+  "vsprettier.useEsLint": true,
+  "vsprettier.useStyleLint": true,
+  "vsprettier.useTabs": true,
+  "vsprettier.useTsLint": true,
+  "vsprettier.jsxSingleQuote": true,
+  "prettier.alignObjectProperties": true,
+  "cSpell.words": [
+    "Bearer",
+    "Departamentos",
+    "Habilitado",
+    "Linea",
+    "Listar",
+    "Typography",
+    "icon",
+    "iniciado",
+    "props",
+    "registrate"
+  ],
+  "files.exclude": {
+    "**/.DS_Store": true,
+    "**/.fdk/**": true,
+    "**/.git": true,
+    "**/.git/objects/**": true,
+    "**/.git/subtree-cache/**": true,
+    "**/.hg": true,
+    "**/.svn": true,
+    "**/bower_components": true,
+    "**/CVS": true,
+    "**/dist/**": true,
+    "**/log/**": true,
+    "**/tmp/**": true
+  }
 }
