--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 		"moleculer-data-provider": "^1.0.3",
 		"moment": "^2.24.0",
 		"moment-timezone": "^0.5.26",
-		"node-sass": "^4.12.0",
+		"node-sass": "^4.13.0",
 		"npm": "^6.12.1",
 		"prettier": "^1.18.2",
 		"ra-auth-acl": "^0.1.1",
@@ -38,8 +38,10 @@
 		"react-icofont": "^1.0.14",
 		"react-icons": "^3.8.0",
 		"react-moment": "^0.9.2",
+		"react-pdf": "^4.1.0",
 		"react-places-autocomplete": "^7.2.1",
 		"react-scripts": "3.1.1",
+		"react-viewer": "^3.0.1",
 		"recharts": "^1.8.5"
 	},
 	"scripts": {
