--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"@material-ui/codemod": "^4.3.0",
 		"@material-ui/core": "^4.5.2",
 		"@material-ui/icons": "^4.2.1",
+		"@material-ui/lab": "^4.0.0-alpha.36",
 		"@material-ui/pickers": "^3.2.4",
 		"@material-ui/system": "^4.5.2",
 		"@react-pdf/renderer": "^1.6.7",
@@ -16,16 +17,18 @@
 		"css-mediaquery": "^0.1.2",
 		"date-fns": "^2.0.0-beta.5",
 		"email-validator": "^2.0.4",
+		"final-form": "^4.18.6",
 		"firebase": "^7.3.0",
 		"graphql": "^14.5.1",
 		"install": "^0.13.0",
 		"lodash": "^4.17.15",
 		"material-ui-pickers": "^2.2.4",
+		"material-ui-search-bar": "^1.0.0-beta.14",
 		"moleculer-data-provider": "^1.0.3",
 		"moment": "^2.24.0",
 		"moment-timezone": "^0.5.26",
 		"node-sass": "^4.13.0",
-		"npm": "^6.13.0",
+		"npm": "^6.13.4",
 		"prettier": "^1.18.2",
 		"ra-auth-acl": "^0.1.1",
 		"react": "^16.9.0",
@@ -33,16 +36,21 @@
 		"react-admin-date-inputs": "^1.1.4",
 		"react-apollo": "^3.0.1",
 		"react-countup": "^4.2.3",
+		"react-dependent-script": "^1.1.2",
 		"react-dom": "^16.9.0",
+		"react-final-form": "^6.3.3",
 		"react-google-charts": "^3.0.15",
 		"react-icofont": "^1.0.14",
 		"react-icons": "^3.8.0",
+		"react-load-script": "0.0.6",
+		"react-loader-spinner": "^3.1.5",
 		"react-moment": "^0.9.2",
 		"react-pdf": "^4.1.0",
 		"react-places-autocomplete": "^7.2.1",
-		"react-scripts": "3.1.1",
+		"react-scripts": "^3.3.0",
 		"react-viewer": "^3.0.1",
-		"recharts": "^1.8.5"
+		"recharts": "^1.8.5",
+		"redux-form": "^8.2.6"
 	},
 	"scripts": {
 		"start": "react-scripts start",
