--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@blackbox-vision/ra-language-spanish": "^3.1.0",
 		"@date-io/date-fns": "^1.3.9",
 		"@date-io/moment": "^1.3.9",
 		"@material-ui/codemod": "^4.3.0",
@@ -31,8 +32,9 @@
 		"npm": "^6.13.4",
 		"prettier": "^1.18.2",
 		"ra-auth-acl": "^0.1.1",
+		"ra-i18n-polyglot": "^3.1.1",
 		"react": "^16.9.0",
-		"react-admin": "^2.9.6",
+		"react-admin": "^3.1.1",
 		"react-admin-date-inputs": "^1.1.4",
 		"react-apollo": "^3.0.1",
 		"react-countup": "^4.2.3",
