--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pladec",
+  "name": "pladeco",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,9 +12,9 @@
     "moment-timezone": "^0.5.27",
     "prop-types": "^15.7.2",
     "ra-auth-acl": "^0.1.1",
-    "ra-data-firestore-client": "^0.1.14",
     "react": "^16.12.0",
     "react-admin": "^3.1.2",
+    "react-admin-firebase": "^0.9.0",
     "react-countup": "^4.3.2",
     "react-dom": "^16.12.0",
     "react-google-charts": "^3.0.15",
