--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-icons": "^3.8.0",
     "react-moment": "^0.9.7",
     "react-scripts": "3.3.0",
-    "react-viewer": "^3.1.0"
+    "react-viewer": "^3.1.0",
+    "typescript": "^3.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
