--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "lodash": "^4.17.15",
     "moment-timezone": "^0.5.27",
     "prop-types": "^15.7.2",
     "ra-auth-acl": "^0.1.1",
