--- a/package.json
+++ b/package.json
@@ -3,19 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@blackbox-vision/ra-language-spanish": "^3.1.0",
+    "@blackbox-vision/ra-language-spanish": "^3.5.0",
     "@material-ui/core": "^4.8.3",
+    "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.39",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "firebase": "^7.17.1",
     "lodash": "^4.17.15",
     "moment-timezone": "^0.5.27",
     "prop-types": "^15.7.2",
     "ra-auth-acl": "^0.1.1",
     "react": "^16.12.0",
-    "react-admin": "^3.1.2",
-    "react-admin-firebase": "^0.9.0",
+    "react-admin": "^3.7.2",
+    "react-admin-firebase": "^3.2.2",
     "react-countup": "^4.3.2",
     "react-dom": "^16.12.0",
     "react-google-charts": "^3.0.15",
