--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "antd": "^4.8.4",
     "firebase": "^7.17.1",
     "lodash": "^4.17.15",
     "moment-timezone": "^0.5.27",
@@ -20,6 +21,7 @@
     "react-admin-firebase": "^3.2.2",
     "react-countup": "^4.3.2",
     "react-dom": "^16.12.0",
+    "react-ga": "^3.2.1",
     "react-google-charts": "^3.0.15",
     "react-icofont": "^1.0.18",
     "react-icons": "^3.8.0",
