fix pladeco offline

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ package.json
 .idea/codeStyles/codeStyleConfig.xml
 .firebase/hosting.YnVpbGQ.cache
 /.idea/codeStyles/Project.xml
+/.idea/codestream.xml
